--- a/website/templates/base+don.jinja
+++ b/website/templates/base+don.jinja
@@ -11,7 +11,7 @@
 <div id="history" class="w3-modal">
   <div class="w3-modal-content w3-padding scroll">
     <span onclick="document.getElementById('history').style.display='none'" class="w3-button w3-display-topright">&times;</span>
-    {% for time, _, msg in players.messages %}
+    {% for time, _, msg in player.messages %}
     {{time.strftime('%H:%M : ') + msg}}
     {% endfor %}
   </div>
