--- a/website/templates/login.jinja
+++ b/website/templates/login.jinja
@@ -3,6 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="prefetch" href="{{ url_for("static", filename="images/coin.png") }}" as ="image">
+    <link rel="prefetch" href="{{ url_for("static", filename="images/6.jpg") }}" as ="image">
+    <link rel="prefetch" href="{{ url_for("static", filename="images/7.jpg") }}" as ="image">
+    <link rel="prefetch" href="{{ url_for("static", filename="images/8.jpg") }}" as ="image">
+    <link rel="prefetch" href="{{ url_for("static", filename="images/9.jpg") }}" as ="image">
+    <link rel="prefetch" href="{{ url_for("static", filename="images/10.jpg") }}" as ="image">
+    <link rel="prefetch" href="{{ url_for("static", filename="animations/Jeu1.sozi.html") }}" as ="document">
+    <link rel="prefetch" href="{{ url_for("static", filename="animations/Jeu2.sozi.html") }}" as ="document">
+    <link rel="prefetch" href="{{ url_for("static", filename="animations/Jeu3.sozi.html") }}" as ="document">
+    <link rel="prefetch" href="{{ url_for("static", filename="animations/Jeu4.sozi.html") }}" as ="document">
+    <link rel="prefetch" href="{{ url_for("static", filename="animations/Jeu5.sozi.html") }}" as ="document">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Baloo+2">
     <link rel="stylesheet" href="{{ url_for("static", filename="flouze.css") }}" type="text/css">
     <style>
