replacing extend with base.jinja

--- a/website/templates/Jeu2-reveal.jinja
+++ b/website/templates/Jeu2-reveal.jinja
@@ -1,7 +1,7 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
 {% set reveal_state = game.current_reveal_state %}
-{% extends "base+don.jinja" %}
+{% extends "base.jinja" %}
 {% block title %}Flouze - Jeu 2{% endblock %}
 {% block content %}
 
