--- a/website/templates/Jeu4-choix.jinja
+++ b/website/templates/Jeu4-choix.jinja
@@ -1,7 +1,7 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
 {% set prizes = engine.current_game.current_prizes %}
-{% extends "base+don.jinja" %}
+{% extends "base.jinja" %}
 {% block title %}Flouze - Jeu 4{% endblock %}
 {% block content %}
 
