--- a/website/templates/Jeu4-reveal.jinja
+++ b/website/templates/Jeu4-reveal.jinja
@@ -2,7 +2,7 @@
 {% set config = game.config %}
 {% set prizes = game.current_prizes %}
 {% set reveal_state = game.current_reveal_state %}
-{% extends "base+don.jinja" %}
+{% extends "base.jinja" %}
 {% block title %}Flouze - Jeu 4{% endblock %}
 {% block content %}
 
