--- a/website/templates/don_etoiles.jinja
+++ b/website/templates/don_etoiles.jinja
@@ -1,6 +1,6 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
-{% extends "base+don.jinja" %}
+{% extends "base.jinja" %}
 {% block title %}Donner des étoiles{% endblock %}
 {% block content %}
 
