--- a/website/templates/en_attente.jinja
+++ b/website/templates/en_attente.jinja
@@ -1,5 +1,5 @@
 {% set game = engine.current_game %}
-{% extends "base+don.jinja" %}
+{% extends "base.jinja" %}
 {% block title %}Flouze{% endblock %}
 {% block content %}
 
