--- a/website/templates/faire_un_don.jinja
+++ b/website/templates/faire_un_don.jinja
@@ -1,6 +1,6 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
-{% extends "base+etoiles.jinja" %}
+{% extends "base.jinja" %}
 {% block title %}Faire un don{% endblock %}
 {% block content %}
 
