--- a/website/templates/Jeu2-choix.jinja
+++ b/website/templates/Jeu2-choix.jinja
@@ -1,6 +1,6 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
-{% extends "base+don.jinja" %}
+{% extends "base.jinja" %}
 {% block title %}Flouze - Jeu 2{% endblock %}
 {% block content %}
 
