--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -49,7 +49,7 @@
 <!--History button-->
 <button onclick="document.getElementById('history').style.display='block'" class="w3-button w3-circle medium w3-text-white" style="border:2px solid #fff; background-color:{{ config["theme_colors"][0] }}"><i class="fa fa-history" style="position:relative; top:1px;"></i></button>
 <div id="history" class="w3-modal">
-  <div class="w3-modal-content w3-padding" style="background-color:{{ config["theme_colors"][1] }}">
+  <div id="history_list" class="w3-modal-content w3-padding" style="background-color:{{ config["theme_colors"][1] }}">
     <span onclick="document.getElementById('history').style.display='none'" class="w3-button w3-display-topright w3-xlarge" style="padding:1px 16px;">&times;</span>
     {% for time, _, msg in player.messages %}
     {{time.strftime('%H:%M : ') + msg}}<br>
@@ -57,11 +57,12 @@
   </div>
 </div>
 
+<!--Content-->
 <div style="width: 100%; display:flex; flex-direction:column; justify-content:space-evenly; align-items:center; flex-grow: 1">
 {% block content %} {% endblock %}
 </div>
 
-
+<!--Toasts-->
 <div id="messages" class="toast">
 {% for category, message in get_flashed_messages(with_categories=true) %}
   {% if category == "error" %}
