--- a/website/templates/base.jinja
+++ b/website/templates/base.jinja
@@ -40,11 +40,13 @@
 {% endif %}
 
 <!--Donation button-->
+{% block donation_button %}
 {% if page["heading"] == "dons" %}
 <form method="GET" action="faire_un_don" class="w3-center" style="margin: 16px 0 0 115px;">
 <button type="submit" class="w3-btn w3-round-large w3-green medium" style="border:2px solid #fff">Faire un don</button>
 </form>
 {% endif %}
+{% endblock %}
 
 <!--History button-->
 <button onclick="document.getElementById('history').style.display='block'" class="w3-button w3-circle medium w3-text-white" style="border:2px solid #fff; background-color:{{ config["theme_colors"][0] }}"><i class="fa fa-history" style="position:relative; top:1px;"></i></button>
