--- a/website/templates/faire_un_don.jinja
+++ b/website/templates/faire_un_don.jinja
@@ -2,6 +2,7 @@
 {% set config = game.config %}
 {% extends "base.jinja" %}
 {% block title %}Faire un don{% endblock %}
+{% block donation_button %}{% endblock %}
 {% block content %}
 
   <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:240px;">
