--- a/website/templates/base_login.jinja
+++ b/website/templates/base_login.jinja
@@ -28,18 +28,40 @@
   </head>
 
 <body>
-<div id="messages" style="position:absolute; bottom:5px; display:flex; flex-direction: column; align-items:center; width:100%; font-size:16px;">
-{% with messages = get_flashed_messages(with_categories=true) %} {% if
- messages %} {% for category, message in messages %}
+
+{% block content %} {% endblock %}
+
+<div id="messages" class="toast">
+{% for category, message in get_flashed_messages(with_categories=true) %}
+  {% if category == "error" %}
   <div class="w3-pale-red w3-round-large w3-border w3-border-red w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
     <i class="fa fa-exclamation-circle w3-text-red" style="margin-right: 6px;"></i>
     <div class="w3-center">{{ message }}</div>
     <span onclick="this.parentElement.style.display='none'" class="w3-hover-gray w3-center w3-round-large" style="width: 25px; position:relative; left:3px">&times;</span>
   </div>
- {% endfor %} {% endif %} {% endwith %}
+  {% else %}
+<div class="w3-pale-green w3-round-large w3-border w3-border-green w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
+  <i class="fa fa-info-circle w3-text-green" style="margin-right: 6px;"></i>
+  <div class="w3-center">{{ message }}</div>
+  <span onclick="this.parentElement.style.display='none'" class="w3-hover-gray w3-center w3-large w3-round-large" style="width: 25px; position:relative; left:3px">&times;</span>
+</div>
+  {% endif %}
+{% endfor %}
+
+{% for message_id, message in player.messages_to_show %}
+  <div class="w3-pale-green w3-round-large w3-border w3-border-green w3-padding-small" style="display:flex; justify-content:space-between; align-items:center; margin-bottom:5px; margin-left: 5px; margin-right: 5px;">
+    <i class="fa fa-info-circle w3-text-green" style="margin-right: 6px;"></i>
+    <div class="w3-center">{{ message }}</div>
+    <span onclick="this.parentElement.style.display='none'; hide_message({{message_id}});" class="w3-hover-gray w3-center w3-large w3-round-large" style="width: 25px; position:relative; left:3px">&times;</span>
+  </div>
+{% endfor %}
 </div>
 
-{% block content %} {% endblock %}
-
+<script type="text/javascript" charset="utf-8">
+var socket = io();
+socket.on('refresh', function() {
+    window.location = window.location;
+});
+</script>
 </body>
 </html>
