--- a/website/templates/Jeu4-reveal.jinja
+++ b/website/templates/Jeu4-reveal.jinja
@@ -10,15 +10,15 @@
   {% for player_it in engine.players %}
     <div class="flip-card card-size">
       <div id="card{{ loop.index0 }}" {% if reveal_state[loop.index0] %} style="transform: rotateY(180deg)" {% endif %} class="flip-card-inner">
-        <div class="flip-card-front" style="background-color:{{ player_it.color }};">
+        <div class="flip-card-front" style="background-color:{{ player_it.color["primary"] }};">
           <h4><b>{{ player_it.name}}</b></h4>
         </div>
-        <div class="flip-card-back" style="background-color:{{ player_it.color }};">
+        <div class="flip-card-back" style="background-color:{{ player_it.color["primary"] }};">
           <h4><b>{{ player_it.name }}</b></h4>
         {% if prizes[player_it.choice] == "star" %}
-        <div class="w3-xlarge w3-margin padding-reveal {% if player_it.choice == 3 %} w3-text-teal {% else %} w3-text-white {% endif %}" style="background-color:{{ player_it.sec_color }}; position:relative; bottom:4px"><i class="fa fa-star"></i></div>
+        <div class="w3-xlarge w3-margin padding-reveal {% if player_it.choice == 3 %} w3-text-teal {% else %} w3-text-white {% endif %}" style="background-color:{{ player_it.color["secondary"] }}; position:relative; bottom:4px"><i class="fa fa-star"></i></div>
         {% else %}
-        <div class="w3-xlarge w3-margin w3-text-white padding-reveal" style="background-color:{{ player_it.sec_color }}; position:relative; bottom:4px">{{ prizes[player_it.choice] }} <img src="/static/images/coin.png" class="coin-medium" alt="Coin"></div>
+        <div class="w3-xlarge w3-margin w3-text-white padding-reveal" style="background-color:{{ player_it.color["secondary"] }}; position:relative; bottom:4px">{{ prizes[player_it.choice] }} <img src="/static/images/coin.png" class="coin-medium" alt="Coin"></div>
         {% endif %}
         </div>
       </div>
