--- a/website/templates/choIx_couleurs.jinja
+++ b/website/templates/choIx_couleurs.jinja
@@ -3,9 +3,9 @@
 {% block title %}Couleurs{% endblock %}
 {% block content %}
 
-<form method="POST" class="w3-center w3-display-middle large w3-padding-small" style="width:100%; height:100%; display:flex; flex-direction:column;">
+<form method="POST" class="w3-center w3-display-middle large w3-padding-small" style="width:100%; height:100%; max-width:700px; display:flex; flex-direction:column;">
 {% for color in game.colors %}
-<div style="flex-grow: 1; margin:5px;">
+<div style="flex-grow: 1; margin:2%;">
     <button type="submit" name="couleurs" value={{color["id"]}} class="w3-padding-large w3-round-large" style="width:100%; height:100%; background-color:{{ color["primary"] }}; border:4px solid {{ color["secondary"] }}">
     {% if "player" in color %}
     {{color["player"].name}}
