color choice (in progress)

--- a/website/templates/Jeu5-proposition.jinja
+++ b/website/templates/Jeu5-proposition.jinja
@@ -3,6 +3,8 @@
 {% set other_players = engine.current_game.other_players %}
 {% extends "base.jinja" %}
 {% block title %}Flouze - Jeu 5{% endblock %}
+{% block stars_table %}{% endblock %}
+{% block donation_button %}{% endblock %}
 {% block content %}
 
 <form method="POST" class="w3-card-4 w3-center medium w3-white animate__animated animate__fadeIn" style="width:320px;">
