--- a/website/templates/Jeu5-reveal.jinja
+++ b/website/templates/Jeu5-reveal.jinja
@@ -4,6 +4,8 @@
 {% set proposition = engine.current_game.current_proposition %}
 {% extends "base.jinja" %}
 {% block title %}Flouze - Jeu 5{% endblock %}
+{% block stars_table %}{% endblock %}
+{% block donation_button %}{% endblock %}
 {% block content %}
 
 <div class="w3-center w3-white animate__animated animate__fadeIn" style="width:320px;">
