--- a/website/templates/final-results.jinja
+++ b/website/templates/final-results.jinja
@@ -2,6 +2,8 @@
 {% set config = game.config %}
 {% extends "base.jinja" %}
 {% block title %}Flouze FIN{% endblock %}
+{% block stars_table %}{% endblock %}
+{% block donation_button %}{% endblock %}
 {% block content %}
 
 <div class="w3-panel w3-center w3-padding w3-large w3-round-large animate__animated animate__fadeIn" style="max-width:90%; border-style:solid; border-width: 5px; border-color:{{ config["theme_colors"][0] }}; background-color:{{ config["theme_colors"][1] }}">
