--- a/website/templates/Jeu5-Valider.jinja
+++ b/website/templates/Jeu5-Valider.jinja
@@ -1,6 +1,8 @@
 {% set game = engine.current_game %}
 {% set config = game.config %}
 {% extends "base.jinja" %} {% block title %}Flouze - Jeu 5{% endblock %}
+{% block stars_table %}{% endblock %}
+{% block donation_button %}{% endblock %}
 {% block content %}
 
   <div class="w3-card-4 w3-white w3-center w3-text-white animate__animated animate__fadeIn" style="width:350px;">
