--- a/website/templates/choIx_couleurs.jinja
+++ b/website/templates/choIx_couleurs.jinja
@@ -1,10 +1,13 @@
 {% set game = engine.current_game %}
-{% extends "base_login.jinja" %}
+{% extends "base.jinja" %}
 {% block title %}Couleurs{% endblock %}
+{% block player_money %}{% endblock %}
+{% block stars_table %}{% endblock %}
+{% block donation_button %}{% endblock %}
 {% block content %}
 
 <form method="POST" class="w3-center w3-display-middle large w3-padding-small" style="width:100%; height:100%; max-width:700px; display:flex; flex-direction:column;">
-{% for color, owmer in zip(game.colors, game.owner) %}
+{% for color, owner in zip(game.colors, game.owner) %}
 <div style="flex-grow: 1; margin:2%;">
     <button type="submit" name="couleurs" value={{ color["id"] }} class="w3-padding-large w3-round-large" style="width:100%; height:100%; background-color:{{ color["primary"] }}; border:4px solid {{ color["secondary"] }}">
     {% if owner %}
