--- a/website/templates/login.jinja
+++ b/website/templates/login.jinja
@@ -1,23 +1,48 @@
-{% extends "base_login.jinja" %}
-{% block title %}Login{% endblock %}
-{% block content %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="prefetch" href="{{ url_for("static", filename="images/6.jpg") }}" as ="image">
+    <link rel="prefetch" href="{{ url_for("static", filename="images/7.jpg") }}" as ="image">
+    <link rel="prefetch" href="{{ url_for("static", filename="images/8.jpg") }}" as ="image">
+    <link rel="prefetch" href="{{ url_for("static", filename="images/9.jpg") }}" as ="image">
+    <link rel="prefetch" href="{{ url_for("static", filename="images/10.jpg") }}" as ="image">
+    <link rel="prefetch" href="{{ url_for("static", filename="animations/Jeu1.sozi.html") }}" as ="document">
+    <link rel="prefetch" href="{{ url_for("static", filename="animations/Jeu2.sozi.html") }}" as ="document">
+    <link rel="prefetch" href="{{ url_for("static", filename="animations/Jeu3.sozi.html") }}" as ="document">
+    <link rel="prefetch" href="{{ url_for("static", filename="animations/Jeu4.sozi.html") }}" as ="document">
+    <link rel="prefetch" href="{{ url_for("static", filename="animations/Jeu5.sozi.html") }}" as ="document">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Baloo+2">
+    <link rel="stylesheet" href="{{ url_for("static", filename="flouze.css") }}" type="text/css">
+    <link rel = "icon" href ="{{ url_for('static', filename="images/coin.png") }}" type="image/x-icon">
+    <style>
+    body {
+      background-image: url({{ url_for("static", filename="images/2.jpg") }});
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+    </style>
+    <title>Login</title>
+  </head>
 
-<div class="w3-card-4 w3-display-middle w3-white" style="width:300px;">
-    <div class="w3-container w3-green w3-center w3-xlarge w3-padding">
-      Qui est-tu ?
+  <body>
+    <div class="w3-card-4 w3-display-middle w3-white" style="width:300px;">
+      <div class="w3-container w3-green w3-center w3-xlarge w3-padding">
+        Qui est-tu ?
+      </div>
+
+      <form class="w3-container" method="POST">
+        <p>
+        <input type="text" class="w3-input" id="firstName" name="firstName">
+        <label>Prénom</label></p>
+        <p>
+        <input type="password" class="w3-input" id="password" name="password">
+        <label>Mot de passe</label></p>
+        <p class="w3-center"><button type="submit" class="w3-btn w3-blue-grey">Se connecter</button></p>
+      </form>
     </div>
+  </body>
 
-    <form class="w3-container" method="POST">
-      <p>
-      <input type="text" class="w3-input" id="firstName" name="firstName">
-      <label>Prénom</label></p>
-      <p>
-      <input type="password" class="w3-input" id="password" name="password">
-      <label>Mot de passe</label></p>
-      <p class="w3-center"><button type="submit" class="w3-btn w3-blue-grey">Se connecter</button></p>
-    </form>
-  </div>
-</body>
 </html>
-
-{% endblock %}
